--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,6 @@
     <body>
         <p>Welcome to node app chat</p>
         <script src="/socket.io/socket.io.js"></script>
-        <script>
-            var socket = io();
-
-            socket.on('connect', () => {
-                console.log('connected to the server');
-            });
-
-            socket.on('disconnect', () => {
-                console.log('Disconnected from server');
-            });
-        </script>
+        <script src="/js/index.js"></script>
     </body>
 </html>
