--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,19 @@
     </head>
     <body>
         <p>Welcome to node app chat</p>
+
+        <ol id="messages">
+            
+        </ol>
+
+        <form id="message-form">
+            <input type="text" name="message" placeholder="Type your message" />
+            <button>Send</button>
+        </form>
+
+
         <script src="/socket.io/socket.io.js"></script>
+        <script src="/js/libs/jquery-3.3.1.min.js"></script>
         <script src="/js/index.js"></script>
     </body>
 </html>
