--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,15 @@
         <p>Welcome to node app chat</p>
 
         <ol id="messages">
-            
+
         </ol>
 
         <form id="message-form">
             <input type="text" name="message" placeholder="Type your message" />
             <button>Send</button>
         </form>
-
+        <button id="send-location">Send location</button>
+        
 
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/libs/jquery-3.3.1.min.js"></script>
