--- a/public/index.html
+++ b/public/index.html
@@ -6,21 +6,26 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="/css/styles.css">
     </head>
-    <body>
-        <p>Welcome to node app chat</p>
+    <body class="chat">
 
-        <ol id="messages">
+        <div class="chat__sidebar">
+            <h3>People</h3>
+            <div id="users"></div>
+        </div>
 
-        </ol>
+        <div class="chat__main">
+            <ol id="messages" class="chat__messages"></ol>
 
-        <form id="message-form">
-            <input type="text" name="message" placeholder="Type your message" />
-            <button>Send</button>
-        </form>
-        <button id="send-location">Send location</button>
-        
+            <div class="chat__footer">
+                <form id="message-form">
+                    <input type="text" name="message" placeholder="Type your message" autofocus autocomplete="off" />
+                    <button>Send</button>
+                </form>
+                <button id="send-location">Send location</button>
+            </div>
+        </div>
 
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/libs/jquery-3.3.1.min.js"></script>
